--- a/src/app/pages/settings/support/support.component.html
+++ b/src/app/pages/settings/support/support.component.html
@@ -146,7 +146,11 @@
               <div *ngIf="helpDetail && !listCategoryDetails" class="help-detail-content" fxLayout="column" fxLayoutAlign="start start">
                   <div [innerHtml]="helpDetail.body"></div>
                   <div class="py-24" *ngIf="helpDetail.image_url">
-                    <img class="previewIcon" [src]="helpDetail.image_url">
+                    <a href="{{helpDetail.image_url}}" target="_blank">
+                      <div class="image-layout">
+                        <img class="previewIcon" [src]="helpDetail.image_url">
+                      </div>
+                    </a>
                   </div>
               </div>
               <div *ngIf="helpDetail && !listCategoryDetails" class="help-detail-footer mt-20" fxLayout="column"> 
