--- a/src/app/pages/settings/support/support.component.scss
+++ b/src/app/pages/settings/support/support.component.scss
@@ -319,11 +319,28 @@
   }
 }
 
+.image-layout {
+  height: 213px !important;
+  width: 413px !important;
+  border-radius: 6px !important;
+  background-color: #ffffff !important;
+  border: 2px solid white !important;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.35) !important;
+  padding: 10px !important;
+  margin: 5px;
+}
+
+.image-layout:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
 .previewIcon {
-  height: 310px !important;
-  width: auto !important;
-  border-radius: 0 !important;
-  background-size: contain !important;
+  width: 390px !important;
+  height: 190px !important;
+  background-size: cover !important;
   border: none !important;
+  padding: 0 !important;
   padding-left: 0;
+  max-width: none !important;
 }
