Bantuan - Improvement 9 - wording bantuan - changes behavior preview detail - more bug fixes

--- a/src/app/pages/content-management/help/edit/help-edit.component.html
+++ b/src/app/pages/content-management/help/edit/help-edit.component.html
@@ -1,16 +1,19 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Ubah Topik Bantuan'">
+  <page-content-header *ngIf="!isPreview" [contentTitle]="'Ubah Topik Bantuan'">
+  </page-content-header>
+  <page-content-header *ngIf="isPreview" [contentTitle]="'Detail Topik Bantuan'">
   </page-content-header>
 
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
       <form autocomplete="off" [formGroup]="formHelp">
         <div fxLayout="row" fxLayoutAlign="space-between center" class="pb-24">
-          <h2 class="">Ubah Topik Bantuan</h2>
+          <h2 *ngIf="!isPreview" class="">Ubah Topik Bantuan</h2>
+          <h2 *ngIf="isPreview">Detail Topik Bantuan</h2>
         </div>
         <div class="ayo-middle" fxLayout="column">
-          <div ngfDrop multiple="1" selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
+          <div *ngIf="!isPreview" ngfDrop multiple="1" selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
             accept="image/*" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag" (filesChange)="onFilesChange()">
             <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
               <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon>
@@ -42,17 +45,21 @@
           </div>
 
           <div class="py-24" *ngIf="!files && detailHelp.image_url">
-            <div class="delete">
+            <div *ngIf="!isPreview" class="delete">
               <mat-icon style="cursor: pointer;" (click)="removeImage()">cancel_outline</mat-icon>
             </div>
-            <div class="image-layout">
+            <div *ngIf="isPreview" class="image-layout ml-0">
+              <img class="previewIcon" [src]="detailHelp.image_url">
+            </div>
+            <div *ngIf="!isPreview" class="image-layout">
               <img class="previewIcon" [src]="detailHelp.image_url">
             </div>
           </div>
           <br>
           <div fxLayout="row">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" formControlName="title" placeholder="Judul Topik Bantuan">
+              <input *ngIf="!isPreview" matInput type="text" formControlName="title" placeholder="Judul Topik Bantuan">
+              <input *ngIf="isPreview" matInput type="text" formControlName="title" placeholder="Judul Topik Bantuan" readonly>
               <mat-error *ngIf="formHelp.controls['title'].hasError('required') && formHelp.controls['title'].touched">
                 Judul Bantuan Wajib Diisi
               </mat-error>
@@ -60,9 +67,10 @@
           </div>
           <div fxLayout="row">
             <mat-form-field fxFlex="50" class="is-light form-primary">
-              <mat-select formControlName="user" placeholder="Grup Pengguna">
+              <mat-select *ngIf="!isPreview" formControlName="user" placeholder="Grup Pengguna">
                 <mat-option *ngFor="let item of userGroup" [value]="item.value">{{item.name}}</mat-option>
               </mat-select>
+              <input *ngIf="isPreview" matInput type="text" formControlName="user" placeholder="Grup Pengguna" readonly>
               <mat-error *ngIf="formHelp.controls['user'].hasError('required') && formHelp.controls['user'].touched">
                 Grup Pengguna Wajib Diisi
               </mat-error>
@@ -70,9 +78,10 @@
           </div>
           <div fxLayout="row">
             <mat-form-field fxFlex="50" class="is-light form-primary">
-              <mat-select formControlName="category" placeholder="Kategori">
+              <mat-select *ngIf="!isPreview" formControlName="category" placeholder="Kategori">
                 <mat-option *ngFor="let item of categoryGroup" [value]="item.value">{{item.name}}</mat-option>
               </mat-select>
+              <input *ngIf="isPreview" matInput type="text" formControlName="category" placeholder="Kategori" readonly>
               <mat-error
                 *ngIf="formHelp.controls['category'].hasError('required') && formHelp.controls['category'].touched">
                 Kategori Wajib Diisi
@@ -81,7 +90,7 @@
           </div>
           <div fxLayout="row">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <mat-chip-list #chipList aria-label="Keyword Selection">
+              <mat-chip-list *ngIf="!isPreview" #chipList aria-label="Keyword Selection">
                 <mat-chip *ngFor="let keyword of keywords" [selectable]="keywordSelectable"
                          [removable]="keywordRemovable" (removed)="remove(keyword)">
                   {{keyword}}
@@ -91,6 +100,16 @@
                   [matChipInputSeparatorKeyCodes]="keywordSeparatorKeysCodes" [matChipInputAddOnBlur]="keywordAddOnBlur"
                   (matChipInputTokenEnd)="add($event)" required>
               </mat-chip-list>
+
+              <mat-chip-list *ngIf="isPreview" #chipList aria-label="Keyword Selection">
+                <mat-chip *ngFor="let keyword of keywords" [selectable]="keywordSelectable"
+                         [removable]="keywordRemovable" (removed)="remove(keyword)">
+                  {{keyword}}
+                </mat-chip>
+                <input matInput placeholder="Kata Kunci Lain" [matChipInputFor]="chipList"
+                [matChipInputSeparatorKeyCodes]="keywordSeparatorKeysCodes" [matChipInputAddOnBlur]="keywordAddOnBlur"
+                (matChipInputTokenEnd)="add($event)" required readonly>
+              </mat-chip-list>
               <mat-error *ngIf="keywords.length == 0">
                 Kata Kunci Wajib Diisi
               </mat-error>
@@ -99,12 +118,13 @@
           <div class="pt-8" fxLayout="row" fxLayoutAlign="start center">
             <h3 class="">Konten Bantuan</h3>
           </div>
-          <textarea [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+          <textarea *ngIf="!isPreview" [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+          <div *ngIf="isPreview" class="layout-preview-content" [innerHtml]="detailHelp.body | safeHtml"></div>
           <mat-error style="padding-top: 6px !important; font-size: .86em;" *ngIf="formHelp.controls['body'].hasError('required') && formHelp.controls['body'].touched">
             Konten Bantuan Wajib Diisi
           </mat-error>
         </div>
-        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
+        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px" *ngIf="!isPreview">
           <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
             SIMPAN
           </button>
